--- a/contapics-frontend/values.yaml
+++ b/contapics-frontend/values.yaml
@@ -5,7 +5,7 @@ image:
 
 service:
   port: 80
-  type: NodePort
+  type: ClusterIP
 
 env:
-  backendUrl: http://contapics-backend:8080
+  backendUrl: "/api"
