added service monitor for the backend service

--- a/contapics-backend/templates/service.yaml
+++ b/contapics-backend/templates/service.yaml
@@ -9,5 +9,6 @@ spec:
   selector:
     app: {{ include "contapics-backend.fullname" . }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: http
+      port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
